--- a/email-service/pom.xml
+++ b/email-service/pom.xml
@@ -47,6 +47,13 @@
 			<artifactId>spring-kafka-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>com</groupId>
+			<artifactId>base-domain</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
