--- a/stock-service/src/main/resources/application.properties
+++ b/stock-service/src/main/resources/application.properties
@@ -1,12 +1,19 @@
 spring.application.name=stock-service
 server.port=8082
 
+# Kafka consumer configurations
 spring.kafka.consumer.bootstrap-servers=localhost:9092
-spring.kafka.consumer.group-id=stock
+spring.kafka.consumer.group-id=stock-consumer-group
 spring.kafka.consumer.auto-offset-reset=earliest
-spring.kafak.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
+# Kafka producer configurations
+spring.kafka.producer.bootstrap-servers=localhost:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 
+# Kafka topics
 spring.kafka.topic.name=order-topics
+spring.kafka.response-topic.name=order-response-topic
